--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	socket.on('newPositions',function(data){
 		ctx.clearRect(0,0,500,500);
 		for(var i = 0 ; i < data.length; i++)
-			ctx.rect(data[i].x,data[i].y,20,20);		
+			ctx.fillRect(data[i].x,data[i].y,20,20);		
 	});
 
 	document.onkeydown = function(event){
